<resources>
    <string name="app_name">K-Jur</string>
    <string name="please_wait">Please wait. . .</string>
    <string name="something_wrong">Something wrong. Please try again later.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password_u"><u>Forgot Password</u></string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree all the Terms and Conditions.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_info">Please enter your registered Email Address to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="detail">Detail</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_hint">Align the QR Code within the square</string>
    <string name="scan_loading">Searching Item</string>
    <string name="item_not_found">Item not Found</string>
    <string name="try_again">Try Again</string>
    <string name="order_history">Order History</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="waiting_payment">Waiting Payment</string>
    <string name="status">Status</string>
    <string name="cart">Cart</string>
    <string name="no_data">No data to display</string>
    <string name="current_stock">Current Stock :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_more">Add More Items</string>
    <string name="payment">Payment</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_payment">You are not choosing your payment method yet. Are you sure you want to go back?</string>
    <string name="method_pay">Pay Method</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="confirm">Confirm</string>
    <string name="stores">Stores</string>
    <string name="location">Location</string>
    <string name="stores_list">Stores List</string>
    <string name="product_list">Product List</string>
    <string name="search_hint">Type product name. . .</string>
    <string name="quantity">Quantity</string>
    <string name="cart_info">Please note that items in your cart are only valid for a day. We will automatically delete all items in the cart the next day.</string>
    <string name="delete_all"><u>Remove All</u></string>
    <string name="are_you_sure_del_cart">Are you sure you want to remove all your item in cart?</string>
    <string name="add_item_to_cart">Add Item to Your Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="profiles">Profiles</string>
    <string name="change_password">Change Password</string>
    <string name="languages">Languages</string>
    <string name="logout">Log Out</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm_password">Confirm New Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="version">Version</string>
    <string name="gamapay">Gamapay</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account Number:</string>
    <string name="scan">Scan</string>
    <string name="top_up">Top Up</string>
    <string name="send">Send</string>
    <string name="time_remaining">Time Remaining : </string>
    <string name="time_warning">Your order will be automatically cancelled after time expires.</string>
    <string name="item">Item</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="sub_total">Sub Total</string>
    <string name="already_paid">Already paid? Click \'Confirm Payment\' button below.</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="otp_sent_to">A One Time Password (OTP) has been sent to</string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="test">The quick brown fox jumps overs the lazy dog</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_number">0</string>
</resources>
