<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.komsi.lab.kjur.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36.7dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="31sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="34dp"
                android:layout_marginStart="9.2dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8.5dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="54.7dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:textSize="14.4sp"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:backgroundTint="#59ffffff" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:textSize="14.4sp"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:backgroundTint="#59ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="10dp" >

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cbShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_password"
                android:textSize="12sp"
                android:textColor="#ffffff"
                app:buttonTint="@color/white"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/forgot_password_u"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:clickable="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34.6dp"
            android:layout_marginEnd="33.6dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle"
            android:gravity="center_horizontal"
            android:padding="16.4dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:theme="@style/PrimaryButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28.1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have"
            android:textColor="#ffffff"
            android:textSize="14.4sp" />

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"
            android:textSize="14.4sp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

</RelativeLayout>
