<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.komsi.lab.kjur.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36.7dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="31sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="34dp"
                android:layout_marginStart="9.2dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8.5dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="40dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14.4sp"
            app:backgroundTint="#59ffffff" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14.4sp"
            app:backgroundTint="#59ffffff" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14.4sp"
            app:backgroundTint="#59ffffff" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14.4sp"
            app:backgroundTint="#59ffffff" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14.4sp"
            app:backgroundTint="#59ffffff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/terms_conditions"
                android:textColor="@color/white_smoke"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33.6dp"
            android:layout_marginStart="34.6dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:gravity="center_horizontal"
            android:padding="16.4dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:theme="@style/PrimaryButton" />

    </LinearLayout>
</ScrollView>
