<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.komsi.lab.kjur.ScanQrLoadingActivity">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close"
        android:tint="@color/colorPrimaryLight"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/ivNoItem"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_close"
        android:tint="@color/colorPrimaryLight"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/ivNoItem"
        android:layout_centerHorizontal="true"
        android:text="@string/item_not_found"
        android:fontFamily="@font/maven_pro_medium"
        android:textColor="@color/gray"
        android:textSize="32sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/loading"
        android:layout_centerHorizontal="true"
        android:text="@string/scan_loading"
        android:fontFamily="@font/maven_pro_medium"
        android:textColor="@color/gray"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tvPWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tvSearch"
        android:layout_centerHorizontal="true"
        android:text="@string/please_wait"
        android:fontFamily="@font/brandon_grotesque_medium"
        android:textColor="@color/gray"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/tvNotFound"
        android:layout_centerHorizontal="true"
        android:theme="@style/PrimaryButton"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"/>
</RelativeLayout>
