<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@color/white"
    android:elevation="4dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="10dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/method_pay"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RadioButton
                android:id="@+id/rbPay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="0dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c2c4ca" />

            <TextView
                android:id="@+id/tvPayDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/test"
                android:textColor="@color/dim_gray"
                android:textSize="12sp"
                android:singleLine="false"/>

            <Button
                android:id="@+id/btnConfirmPayment"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/PrimaryButton"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/confirm_payment"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>